Extend update a `style` block algorithm to non-HTML documents

https://bugs.webkit.org/show_bug.cgi?id=259979

Reviewed by Tim Nguyen and Chris Dumez.

This patch aligns WebKit with Gecko / Firefox and Web-Spec [1].

[1] https://html.spec.whatwg.org/multipage/semantics.html#update-a-style-block

This PR extends MIME Types to be non-case sensitive for non-HTML Documents
matching Gecko and also remove related 'FIXME'.

* Source/WebCore/dom/InlineStyleSheetOwner.cpp:
(isValidCSSContentType): Remove FIXME and update 'return' as per commit
(InlineStyleSheetOwner::createSheet): Remove use of 'element' parameter
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/document-metadata/the-style-element/style_type_svg-expected.txt: Rebaselined

Canonical link: https://commits.webkit.org/266744@main